Removed some whitespace at the edges of the header and footer Added a assignColors.py file that looks in its directory and subdirectory for .template files and fills them in according to a standard {% color_category color_choice %} is the standard, more info can be found in the .py file This is just for testing purposes to be able to easily see the effect different color schemes have on each section of our webpage

--- a/code/glucocheck/homepage/static/footer/style.css.template
+++ b/code/glucocheck/homepage/static/footer/style.css.template
@@ -3,12 +3,12 @@ body {
 }
 
 .footer {
-  background-color: #333;
+  background-color: {% background_color color1 %};
   overflow: hidden;
 }
 
 .footer .column a, h2 {
-	color: #f2f2f2;
+	color: {% text_color color1 %};
 	text-align: center;
 }
 
@@ -26,7 +26,7 @@ body {
 
 .footer p, i{
 	float: left;
-	color: #f2f2f2;
+	color: {% text_color color1 %};
 	text-align: center;
 	font-size: 17px;
 	margin: 0;
