--- a/code/glucocheck/homepage/static/header/style.css.template
+++ b/code/glucocheck/homepage/static/header/style.css.template
@@ -3,13 +3,13 @@ body {
 }
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
+  background-color: {% background_color color1 %};
   overflow: hidden;
   margin: 0;
 }
 .topnav p, i {
 	float: left;
-	color: #f2f2f2;
+	color: {% text_color color1 %};
 	text-align: center;
 	font-size: 17px;
 	margin: 0;
@@ -23,7 +23,7 @@ body {
 /* Style the links inside the navigation bar */
 .topnav a {
   float: right;
-  color: #f2f2f2;
+  color: {% text_color color1 %};
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -32,12 +32,12 @@ body {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: {% background_color hover1 %};
+  color: {% text_color hover1 %};
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: {% background_color color2 %};
+  color: {% text_color color2 %};
 }
